--- a/06/HW6/style/menustyle.css
+++ b/06/HW6/style/menustyle.css
@@ -4,8 +4,18 @@ box-sizing: border-box;
 
 body{
     background-color: #F7B3B3;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings:
+    "slnt" <slant>;
 }
 
+h1 {
+    font-weight: 600;
+    font-size: 32px;
+}
     .container {
         width: 360px;
         margin: 100px auto;
@@ -17,6 +27,12 @@ body{
 button {
     border: none;
     background-color: #FFF;
+}
+#imgbutton{
+    width: 30px;
+    height: 30px;
+    margin-top: 23px;
+    margin-bottom: 17px;
 
 }
 
@@ -35,20 +51,31 @@ h3 {
     font-size: 20px;
     color: #003049;
     margin-right: 271px;
+    margin-top: 32px;
+    font-weight: bold;
    
 }
+
 
 .menu-items{
    /* padding: 0 4px;*/
    box-sizing: border-box;
+}
+
+img {
+width: 74px;
+height: 74px;
+
 
 }
+
 .position-img{
     width: 74px; 
     height: 74px;
     background: #EFEFEF;
     border-radius: 12px;
     margin-right: 24px;
+    
 
 }
 
@@ -65,6 +92,7 @@ h3 {
 
 .menu-position:hover .position-img{
     background-color: #EAE2B7;
+    
 }
 
 .menu-position:hover .position-title{
@@ -130,7 +158,8 @@ h4{
     font-weight: 400;
     font-size: 16px;
     color: #003049;
-    margin-top: 2px;
+    margin-top: 8px;
+    text-align: center;
     /*margin-right: 167px;*/
     margin-bottom: 8px;
     /*margin-left: 12px;*/
