--- a/06/HW6/style/menustyle.css
+++ b/06/HW6/style/menustyle.css
@@ -1,34 +1,36 @@
-*{
-box-sizing: border-box;
+* {
+    box-sizing: border-box;
 }
 
-body{
+body {
     background-color: #F7B3B3;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
     font-variation-settings:
-    "slnt" <slant>;
+        "slnt" <slant>;
 }
 
 h1 {
     font-weight: 600;
     font-size: 32px;
 }
-    .container {
-        width: 360px;
-        margin: 100px auto;
-        border-radius: 20px;
-        background-color: #FFF;
-        padding: 56px 20px 91px 20px;
-    }
-   
+
+.container {
+    width: 360px;
+    margin: 100px auto;
+    border-radius: 20px;
+    background-color: #FFF;
+    padding: 56px 20px 91px 20px;
+}
+
 button {
     border: none;
     background-color: #FFF;
 }
-#imgbutton{
+
+#imgbutton {
     width: 30px;
     height: 30px;
     margin-top: 23px;
@@ -36,7 +38,7 @@ button {
 
 }
 
-#Searchfood{
+#Searchfood {
     border: none;
     border-radius: 12px;
     width: 316px;
@@ -53,53 +55,49 @@ h3 {
     margin-right: 271px;
     margin-top: 32px;
     font-weight: bold;
-   
+
 }
 
 
-.menu-items{
-   /* padding: 0 4px;*/
-   box-sizing: border-box;
-}
-
-img {
-/*width: 74px;
-height: 74px;*/
+.menu-items {
+    /* padding: 0 4px;*/
+    box-sizing: border-box;
 }
 
 
-.position-img{
-    width: 74px; 
+.position-img {
+    /*  width: 74px; 
     height: 74px;
-    background: #EFEFEF;
+    background: #EFEFEF;*/
     border-radius: 12px;
     margin-right: 24px;
-    
-
 }
 
-.position-title{
+.position-img:hover .img-container {
+    background: #eae2b7;
+}
+
+.position-title {
     color: #c4c4c4;
     text-align: center;
 }
 
-.menu-position{
+.menu-position {
 
     display: inline-block;
-    
+
 }
 
-.menu-position:hover .position-img{
+/*.menu-position:hover .position-img{
     background-color: #EAE2B7;
     
-}
+}*/
 
 /*.menu-position:hover .position-title{
     color: black;
 }*/
 
-.menu-choice
-{
+.menu-choice {
     width: 316px;
     height: 88px;
     margin-top: 26px;
@@ -113,17 +111,17 @@ height: 74px;*/
     padding-top: 6px;
     padding-left: 16px;
     /*display: inline-block;*/
-    
+
 }
 
-.price{
+.price {
     display: inline-block;
     vertical-align: top;
     padding-left: 15px;
 }
 
 
-h4{
+h4 {
     font-weight: 400;
     font-size: 16px;
     color: #003049;
@@ -132,28 +130,26 @@ h4{
     /*margin-right: 167px;*/
     margin-bottom: 8px;
     /*margin-left: 12px;*/
-    
-    
-   
+
+
+
 }
 
-p{
+p {
     font-weight: 500;
     font-size: 14px;
     color: #d62828;
     margin-top: 0px;
-   /* margin-right: 167px;
+    /* margin-right: 167px;
     margin-bottom: 22px;
     margin-left: 12px;*/
-     
- }
+
+}
 
 .img-container {
     height: 74px;
     width: 74px;
     background: #EFEFEF;
-    border-radius: 24px;
+    border-radius: 12px;
     padding: 20px;
 }
-
-
