--- a/09/style.css
+++ b/09/style.css
@@ -65,7 +65,7 @@ header{
     background-color: darkgreen;
     text-align: center;
     position: absolute;
-   top 60px;
+   top: 60px;
     left: 60px;
     z-index: 2;
    /* top: 0;
