--- a/09/HW/flaqgs.css
+++ b/09/HW/flaqgs.css
@@ -38,7 +38,7 @@
 .block-container2 {
     width: 512px;
     height: 512px;
-    background-color: yellow;
+    background: linear-gradient(180deg, #2137fc 0%, #2137fb 50.01%, #ffd84b 50.04%, #ffd84b 100%);
     text-align: center;
     position: absolute;
     top: 395px;
@@ -47,18 +47,13 @@
     box-sizing: border-box;
 }
 
-#blue {
-    padding-top: 0px;
-}
 
-#glyph {
+
+#glyph1 {
     position: relative;
     z-index: 4;
-    top: -132px;
-    /*top: 142px;
-   left: 56px;
-   right: 56px;
-   bottom: 142px; */
+    top: 140px;
+
 }
 
 .block-container3 {
@@ -66,13 +61,52 @@
     height: 512px;
     border-bottom: 2px solid #2137fc;
     border-top: 2px solid #2137fc;
-    background-color: yellow;
+    /* background-color: yellow;*/
     text-align: center;
     position: absolute;
-    top: 815px;
-    left: 845px;
-    z-index: 3;
+    top: 855px;
+    left: 870px;
+    z-index: 2;
     box-sizing: border-box;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 
 }
+
+.circle {
+    width: 444px;
+    height: 444px;
+    background-color: yellow;
+    border-radius: 50%;
+    /*border: solid white 50px;
+    border-radius: 256px;
+    background-color: transparent;*/
+    position: absolute;
+    z-index: 5;
+    top: 34px;
+    right: 34px;
+    bottom: 34px;
+    left: 34px;
+}
+
+
+
+#blue1 {
+    width: 444px;
+    height: 216px;
+    position: absolute;
+    z-index: 6;
+    left: 0px;
+
+}
+
+#Glyph2 {
+    width: 358px;
+    height: 203px;
+    top: 185px;
+    position: absolute;
+    z-index: 7;
+    left: 40px;
+
+}
+
+
