--- a/HW10/style.css
+++ b/HW10/style.css
@@ -3,8 +3,7 @@
 }
 
 body {
-    /* <uniquifier>: Use a unique and descriptive class name
- <weight>: Use a value from 100 to 900*/
+   
 
     .catamaran {
         font-family: "Catamaran", sans-serif;
@@ -27,6 +26,7 @@ body {
 }
 
 .main-container {
+    margin: 0 auto;    
     width: 1920px;
     height: 960px;
     background-color: rgba(0, 161, 198, 0.05);
@@ -39,6 +39,7 @@ body {
     text-align: left;
     padding-left: 315px;
     padding-top: 142px;
+    
 }
 
 h1 {
@@ -74,11 +75,13 @@ h3 {
     position: relative;
     top: 50px;
     left: 315px;
-    right: 20px;
+    margin-right: 20px;
     background-color: white;
     border-radius: 24px;
     display: inline-block;
     vertical-align: middle;
+    
+    
 }
 
 .box-dev>img {
@@ -113,16 +116,82 @@ h3 {
 .img-container {
     width: 50px;
     height: 50px;
-    background-color: white;
-    border-radius: 50px;
+    border-radius: 50%;
     overflow: hidden;
     /*padding-top: 33px;
     padding-left: 122px;
     padding-right: 122px;
     padding-bottom: 122px;*/
-    display: block;
+    display: inline-block;
     position: relative;
     left: 120px;
     text-align: center;
     
+}
+
+.img-container>img {
+    background-color: #41B883;
+    width: 50px;
+    height: 50px;
+    padding: 15px;
+    display: inline-block;
+}
+
+.img-container2 {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: inline-block;
+    background-color: #34474F;
+    margin-top: 0px;
+    margin-left: 57px;
+    margin-right: 15px;
+    
+}
+
+.img-container2>.logo2 {
+    background-color: #34474F;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    padding: 10px;
+    
+  }
+
+  .img-container3{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: inline-block;
+    margin-top: 0px;
+    margin-right: 15px;
+    background-color: #202124;
+    text-align: center;
+}
+
+.img-container3>.logo3 {
+   
+    width: 50px;
+    height: 50px;
+    padding: 12px;
+}
+
+.img-container4{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: inline-block;
+    padding: 6px;
+    background-color: #61DAFB;
+    text-align: center;
+}
+
+.img-container4>.logo4 {
+   
+    width: 50px;
+    height: 50px;
+    padding: 12px;
 }
