--- a/13/HW13/style.css
+++ b/13/HW13/style.css
@@ -30,22 +30,36 @@ section{
     justify-content: space-around;
     
     /* justify-content: center; */
-    
-     /* margin: 0 auto;  */
+     margin: 0 auto;  
 }
-header{
+
+/* header{ 
     width: 100% ;
     height: 150px;
     border: 2px solid salmon;
 }  
+
 .header-content {
 width: 82%;
 height: 50%;
 margin: 35px auto;
 border: 1px solid blue;
+}*/
 
-display: inline-flex;
-
-
-
+header{
+    width: 1440px;
+    height: 100px;
+    display: flex;
+    background-color: aqua;
+}
+.header-group{
+    width: 82%;
+    max-height: 50px;
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* justify-content: space-around; */
+    display: inline-block;
+    margin: 0 auto;
+    background-color: blueviolet
+    ;
 }
