--- a/13/style.css
+++ b/13/style.css
@@ -18,11 +18,11 @@ display: flex;
 /* flex-direction: column-reverse; */
 /* justify-content: center; */
 /* justify-content: space-between; */
-justify-content: space-around;
+/* justify-content: space-around; */
 /* align-items: stretch; */
 /* align-items: center; */
-/* align-items: flex-start; */
-align-items: flex-end; 
+align-items: flex-start;
+/* align-items: flex-end;  */
 }
 .item{
     background-color: gray;
