--- a/16/HW16_Poster/poster.css
+++ b/16/HW16_Poster/poster.css
@@ -23,7 +23,7 @@ body {
 
 .container {
     width: 90%;
-    /* margin: 0 auto; */
+    margin: 0 auto; 
 }
 
 header {
@@ -33,8 +33,8 @@ header {
 
 header .container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-between ; 
+    align-items: center; 
 }
 
 .logo>img {
@@ -44,21 +44,27 @@ header .container {
 
 p {
     padding-left: 26px;
-    /* margin-top: 50px; */
-    /* padding-top: 77px; */
+   
     font-weight: 500;
     font-size: 24px;
     color: #c8c8c8;
-    align-items: center;
+    text-align: center;
+    border: none;
 }
 
-.logo>p {
-    display: inline-block;
-}
-.header-group{
+.logo>.date {
     display: inline-block;
     
 }
+.date{
+    /* margin-top: 77px;
+    margin-left: 26px; */
+    text-align: center;
+    
+}
+
+    
+
 .header-group>button{
     width: 43px;
     height: 43px;
