--- a/16/HW16_Poster/poster.css
+++ b/16/HW16_Poster/poster.css
@@ -23,20 +23,32 @@ body {
 }
  /* Header */
 
- .container {
-    width: 90%;
-    margin: 0 auto;
+ /* .container {
+    width: 90%; */
+    /* margin: 0 auto; */
+/* } */
+.container{
+    max-width: 1180px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+   
 }
 
 header {
     padding-top: 70px;
     padding-left: 80px;
+    max-width: 1180px;
 }
 
 header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 auto;
 }
 
 .logo>img {
@@ -46,7 +58,7 @@ header .container {
 
 p {
     width: 250px;
-     margin-left: -585px; */
+    margin-left: -545px; 
     font-weight: 500;
     font-size: 24px;
     color: #c8c8c8;
@@ -102,6 +114,7 @@ display: flex;
 }
 .text-block{
     display: inline-block;
+    width: auto;
     padding-right: 20px;
     margin-left: 20px; 
     border-right: 3px solid #c8c8c8;
@@ -114,11 +127,14 @@ display: flex;
     margin-left: 0px;
 }
 .details .text-block{
-    display: inline-block;
-    /* justify-content: row;
-    align-items: flex-start; */
-
+    display: inline-flex;
+    justify-content: space-around;
+    align-items: baseline;
+    
 }
+ .details{
+    margin-bottom: 30px;
+} 
  h3>h4{ 
     display: inline-block;
  }
@@ -128,17 +144,50 @@ h1{
     font-size: 64px;
     letter-spacing: 0.06em;
     color: #fff;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 35px;
+    margin-bottom: 35px;
 }
 h3{
     font-weight: 500;
     font-size: 30px;
     color: #fff;
+    margin-right: 10px;
 
 }
 h4{
     font-weight: 400;
     font-size: 29px;
     color: #a7a6a6;
+}
+article{
+    display: block;
+    width: 864px;
+    height: 130px;
+    font-weight: 400;
+font-size: 24px;
+line-height: 142%;
+color: #a7a6a6;
+margin-top: 8px;
+}
+.review{
+    width: 212px;
+height: 34px;
+color: yellow;
+}
+#stream{
+    border-radius: 10px;
+width: 272px;
+height: 64px;
+background: #d40d1f;
+margin-right: 50px;
+margin-top: 53px;
+}
+#episode{
+    border: 3px solid #fff;
+border-radius: 10px;
+background-color: transparent;
+color: #fff;
+width: 271px;
+height: 64px;
+margin-top: 53px;
 }
