--- a/16/HW16_Poster/poster.css
+++ b/16/HW16_Poster/poster.css
@@ -214,11 +214,12 @@ article {
     color: yellow;
 }
 
-.buttons-block{
-width: 50%;
-height: 75px;
-margin-top: 50px;
+.buttons-block {
+    width: 50%;
+    height: 75px;
+    margin-top: 50px;
 }
+
 #stream {
     font-weight: 500;
     font-size: 22px;
@@ -229,7 +230,7 @@ margin-top: 50px;
     height: 64px;
     background: #d40d1f;
     margin-right: 50px;
-   
+
 }
 
 #stream>.play {
@@ -260,18 +261,18 @@ margin-top: 50px;
 
 .slider-announce {
     /* width: 1600px; */
-    
+
     display: flex;
     flex-direction: row;
     justify-content: left;
     margin-top: 54px;
-    
+
 }
 
 .slider-icons {
     display: inline-block;
-width: 180px;
-height: 60px;
+    width: 180px;
+    height: 60px;
 }
 
 .slider-icons>img {
@@ -310,4 +311,31 @@ height: 60px;
     width: 1000px;
     display: inline-block;
     /* margin: 0 auto; */
+}
+
+.side-block {
+    display: inline-block;
+    width: 174px;
+    height: 66px;
+    background: rgba(255, 255, 255, 0.49);
+    position: fixed;
+    top: 850px;
+    left: 1553px;
+}
+
+.grey {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 142%;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+}
+
+.red {display: inline-block;
+    width: 33px;
+    height: 66px;
+    background: #d40d1f;
+    /* margin-top: -48px;
+    margin-left: 60px; */
 }
