--- a/16/HW16_Poster/poster.css
+++ b/16/HW16_Poster/poster.css
@@ -27,33 +27,32 @@ body {
 
 
 .container {
-    max-width: 1630px;
+    max-width: 1614px;
     position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
+    padding-left: 60px;
 
 }
 
 header {
     padding-top: 40px;
-    padding-left: 80px;
-    /* width: 1520px; */
-    /* max-width: 90%; */
     margin-bottom: 100px;
 
 }
 
-.container {
-    max-width: 1200px;
-    display: flex;
+
+/* .container { */
+    /* max-width: 1200px; */
+    /* display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; */
     /* margin: 0 auto; */
-}
+/* } */
 
 .block {
     display: inline-block;
@@ -170,8 +169,8 @@ h4 {
 }
 
 article {
-    display: block;
-    width: 864px;
+    display: flex;
+    max-width: 860px;
     height: 130px;
     font-weight: 400;
     font-size: 24px;
@@ -306,7 +305,7 @@ article {
     background: rgba(255, 255, 255, 0.49);
     position: fixed;
     bottom: 150px;
-    right: 150px;
+    right: 0px;
 }
 
 .grey {
@@ -325,4 +324,9 @@ article {
     height: 66px;
     background: #d40d1f;
    
+}
+.content-block{
+    margin: 0 auto;
+    padding-left: 80px;
+    
 }
